# app

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  build-foundations.md  docker-compose.dev.yml  docker-compose.prod.yml  dogbase-build.md
backend/: pyproject.toml
backend/app/: config.py  db.py  deps.py  ids.py  main.py  photos.py  security.py  video.py
backend/app/auth/: base.py  deps.py  magiclink.py
backend/app/routes/: auth.py  dex.py  sighting.py
backend/app/storage/: base.py  s3.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_full_v2_schema.py
backend/tests/: conftest.py  test_auth_deps.py  test_auth_route.py  test_dex.py  test_ids.py  test_magiclink.py  test_migration.py  test_photos.py  test_security.py  test_sighting.py  test_storage.py  test_video.py
deploy/: entrypoint.sh
docker/db/: Dockerfile
docs/plans/: 2026-07-19-indiedex-mvp.md
docs/specs/: 2026-07-10-design.md  2026-07-10-dogbase-v1-design.md  2026-07-19-indiedex-mvp-design.md
docs/specs/assets/: 2026-07-10-schema.html
docs/superpowers/specs/assets/: dogbase-er-v2.mmd  dogbase-schema.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: DogMap.tsx  DogSprite.tsx
frontend/src/offline/: queue.ts
frontend/src/screens/: Capture.tsx  Dex.tsx
