[project]
name = "indiedex-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.0.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.115.0",
    "imagehash>=4.3.1",
    "itsdangerous>=2.2.0",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "uuid-utils>=0.17.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "piexif>=1.1.3",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
